--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,4 +24,4 @@ include = ["cyy_torch_algorithm"]
 defineConstant = { DEBUG = true }
 
 reportMissingImports = true
-reportMissingTypeStubs = true
+reportMissingTypeStubs = false
