--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [build-system]
-requires = ["setuptools >= 61.0"]
+requires = ["setuptools >= 63.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "cyy_torch_algorithm"
 version = "0.2"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 readme = {file = "README.md", content-type = "text/markdown"}
 authors = [
   {name = "cyy", email = "cyyever@outlook.com"},
@@ -14,6 +14,11 @@ license = {text = "BSD License"}
 classifiers = [
   "Programming Language :: Python"
 ]
+
+dynamic = ["dependencies"]
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
+
 
 
 [project.urls]
