--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-git+ssh://git@github.com/cyyever/torch_toolbox.git@main#egg=cyy_torch_toolbox
+cyy_torch_toolbox@git+https://git@github.com/cyyever/torch_toolbox.git@main
