--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-cyy_torch_toolbox@git+https://git@github.com/cyyever/torch_toolbox.git@main
+cyy_torch_toolbox@git+https://github.com/cyyever/torch_toolbox.git@main
