--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,10 +26,7 @@ Repository = "https://github.com/cyyever/torch_algorithm"
 
 [tool.pyright]
 include = ["cyy_torch_algorithm"]
-defineConstant = { DEBUG = true }
 
-reportMissingImports = true
-reportMissingTypeStubs = false
 
 [tool.ruff]
 target-version = "py312"
@@ -50,3 +47,4 @@ select = [
     # isort
     "I",
 ]
+ignore = ["F401","E501","F403"]
